--- a/Stylesheets/general.css
+++ b/Stylesheets/general.css
@@ -4,3 +4,9 @@
     padding: 0;
     font-family: 'Marat Sans', sans-serif;
 }
+
+body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
