--- a/Stylesheets/header.css
+++ b/Stylesheets/header.css
@@ -1,3 +1,28 @@
+.pre-header {
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    cursor: pointer;
+    color: gray;
+    transition: color 0.15s;
+}
+
+.pre-header:hover {
+    color: black;
+}
+
+.pre-header p {
+    font-size: 13px;
+    margin-right: 5px;
+}
+
+.pre-header .fa-arrow-up-long {
+    font-size: 14px;
+}
+
+
 header {
     display: flex;
     width: 100%;
@@ -7,6 +32,69 @@ header {
     justify-content: space-between;
     border-bottom: solid 1px #f3f0f0;
 }
+
+.search-bar-focus {
+    position: relative;
+}
+
+.call-out {
+    display: none;
+    position: absolute;
+    align-items: center;
+    top: 47px; /* Adjust based on input box */
+    left: 18px;
+    background-color: white;
+    border: none;
+    border-radius: 2px;
+    padding: 10px 15px;
+    font-size: 14px;
+    color: #333;
+    box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    width: 300px;
+    height: 70px;
+    /* display: none; */
+    cursor: pointer;
+}
+
+.call-out .fa-arrow-up-long:hover {
+    color: black;
+}
+
+.call-out::before {
+    content: '';
+    position: absolute;
+    top: -20px; /* Position the arrow above the box */
+    left: 30px; /* Align with the box */
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent white transparent;
+}
+
+.input-bar:focus + .call-out {
+    display: flex;
+}
+
+.input-bar:not(:placeholder-shown) + .call-out {
+    display: none;
+}
+
+
+.call-out .fa-compass {
+    font-size: 20px;
+    color: gray;
+    margin-right: 15px;
+}
+
+.explore-topics {
+    margin-right: 125px;
+}
+
+.call-out .fa-arrow-up-long {
+    color: gray;
+    transition: color 0.15s;
+}
+
 
 .left-section {
     width: 400px;
@@ -40,7 +128,7 @@ header {
     outline: none;
 }
 
-.fa-search {
+.search-box .fa-search {
     position: absolute;
     left: 14px;
     color: rgba(128, 128, 128, 0.788);
@@ -52,12 +140,25 @@ header {
     align-items: center;
 }
 
+.right-section .fa-search {
+    color: rgba(128, 128, 128, 0.788);
+    font-size: 18px;
+    cursor: pointer;
+    transition: color 0.15s;
+    display: none;
+}
+
+.right-section .fa-search:hover {
+    color: black;
+}
+
 .new-post {
     display: flex;
     align-items: center;
     cursor: pointer;
     color: gray;
     transition: color 0.15s;
+    margin-left: 25px;
 }
 
 .new-post:hover {
@@ -88,13 +189,43 @@ header {
     color: #000000;
 }
 
-.profile-picture {
+.right-section .header-profile-picture {
     width: 32px;
     border-radius: 50%;
     cursor: pointer;
     transition: color 0.15s;
 }
 
-.profile-picture:hover {
+.header-profile-picture:hover {
     box-shadow: inset 0 0 10px #00000080;
+}
+
+
+/* ---------Responsive designs for various screens */
+
+@media (max-width: 903px) {
+    .pre-header {
+        display: flex; 
+    }
+
+    header {
+        border-top: solid 1px #f3f0f0;
+    }
+}
+
+
+@media (max-width: 727px) {
+    .new-post {
+        display: none;
+    }
+}
+
+@media (max-width: 551px) {
+    .search-bar-focus {
+        display: none;
+    }
+
+    .right-section .fa-search {
+        display: flex;
+    }
 }
