--- a/Stylesheets/mainpage.css
+++ b/Stylesheets/mainpage.css
@@ -53,3 +53,121 @@
     color: #333;
   }
   
+
+.article-block {
+  width: 100%;
+  display: flex;
+  gap: 50px;
+  margin-top: 30px;
+  border-bottom: solid 1px rgb(241, 239, 239);
+  padding-bottom: 30px;
+  margin-bottom: 40px;
+  cursor: pointer;
+}
+
+.leftsection {
+  flex: 1;
+}
+
+.rightsection {
+  flex: 1;
+  text-align: center;
+}
+
+.rightsection .article-thumbnail {
+  width: 160px;
+}
+
+.author-details {
+  display: flex;
+  margin-bottom: 20px;
+  gap: 10px;
+}
+
+.author-details img {
+  width: 20px;
+}
+
+.author-details .small-text-author {
+  font-size: 13px;
+  color: gray;
+  cursor: pointer;
+}
+
+.small-text-author span {
+  color: black;
+}
+
+.small-text-author span:hover {
+  text-decoration: underline;
+}
+
+.leftsection .article-title {
+  font-size: 22px;
+}
+
+.leftsection .article-excerpt {
+  font-size: 15px;
+  color: gray;
+  margin-bottom: 20px;
+}
+
+.article-stats {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.article-date span {
+  color: orange;
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+.article-date {
+  font-size: 14px;
+  color: gray;
+  margin-right: 15px;
+}
+
+.fa-hands-clapping {
+  color: gray;
+  margin-right: 5px;
+}
+
+.readers-number {
+  font-size: 14px;
+  color: gray;
+  margin-right: 15px;
+}
+
+.fa-message {
+  color: gray;
+  font-size: 14px;
+  margin-right: 5px;
+}
+
+.comments-number {
+  font-size: 14px;
+  color: gray;
+  margin-right: 30px;
+}
+
+.fa-circle-minus {
+  color: gray;
+  font-size: 18px;
+  margin-right: 30px;
+}
+
+.fa-circle-minus:hover {
+  color: black;
+}
+
+.fa-ellipsis {
+  color: gray;
+}
+
+.fa-ellipsis:hover {
+  color: black;
+}
+
